--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.4.21",
+    "@vuepic/vue-datepicker": "^8.5.0",
+    "v-calendar": "^3.1.2",
+    "vue": "^3.4.24",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
@@ -33,7 +35,7 @@
     "jsdom": "^24.0.0",
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.2.5",
-    "typescript": "~5.4.0",
+    "typescript": "^5.4.5",
     "vite": "^5.2.8",
     "vite-plugin-vue-devtools": "^7.0.25",
     "vitest": "^1.4.0",
